syntax = "proto3";

package cloud.lazycat.apis.localdevice;

option go_package = "gitee.com/linakesi/lzc-sdk/lang/go/localdevice";

service Helper {
  rpc Diff(HashInfo) returns (DiffResponse) {};
}

message HashInfo {
  string id = 1;
  string hash = 2;
}

message DiffResponse {
  bool isDiff = 1;
}
